--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "url": "https://github.com/midorikocak/umprum/issues"
   },
   "homepage": "https://github.com/midorikocak/umprum#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "vuepress": "^1.2.0"
+  }
 }
