--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,5 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BASE_BRANCH: master # The branch the action should deploy from.
         BRANCH: gh-pages # The branch the action should deploy to.
+        FOLDER: docs/.vuepress/dist # The folder the action should deploy.
         BUILD_SCRIPT: yarn install && yarn docs:build # The build script the action should run prior to deploying.
