--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@master
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages # The branch the action should deploy to.
+        BRANCH: gh-pages
         FOLDER: docs/.vuepress/dist # The folder the action should deploy.
         BUILD_SCRIPT: yarn install && yarn docs:build # The build script the action should run prior to deploying.
-
